--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,11 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+
+
+    <dimen name="default_text_size">16sp</dimen>
+    <dimen name="ui_group_top_margin">24dp</dimen>
+
+    <dimen name="small_margin">10dp</dimen>
 </resources>
