--- a/app/src/main/res/layout/card_format.xml
+++ b/app/src/main/res/layout/card_format.xml
@@ -11,9 +11,14 @@
         app:cardUseCompatPadding="true"
         android:layout_gravity="center"
         android:elevation="1dp"
-        android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp"
-        app:cardCornerRadius="4dp">
+        app:cardCornerRadius="4dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"
+        android:padding="15dp"
+        tools:cardBackgroundColor="@color/grey60"
+        tools:cardCornerRadius="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
