--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,18 @@
     <color name="colorPrimary">#4C8BF5</color>
     <color name="colorPrimaryDark">#2263D3</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="cyan">#00BCD4</color>
+    <color name="green">#4CAF50</color>
+    <color name="orange">#FF9800</color>
+    <color name="ind">#e0e0e0</color>
+    <color name="grey60">#40e0e0e0</color>
+    <color name="no">#00000000</color>
+    <color name="yellove">#FFA000</color>
+    <color name="red">#D32F2F</color>
+
+    <color name="white">#ffffff</color>
+    <color name="white80">#80ffffff</color>
+
+    <color name="cardGreen">#a4c639</color>
 </resources>
