--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,15 @@
     <dimen name="ui_group_top_margin">24dp</dimen>
 
     <dimen name="small_margin">10dp</dimen>
+
+
+    <dimen name="icon_top_margin">16dp</dimen>
+    <dimen name="icon_bottom_margin">16dp</dimen>
+
+    <dimen name="dots_height">30dp</dimen>
+    <dimen name="dots_margin_bottom">20dp</dimen>
+    <dimen name="img_width_height">120dp</dimen>
+    <dimen name="slide_title">30dp</dimen>
+    <dimen name="slide_desc">16dp</dimen>
+    <dimen name="desc_padding">40dp</dimen>
 </resources>
