--- a/app/src/main/res/layout/activity_pothole_details.xml
+++ b/app/src/main/res/layout/activity_pothole_details.xml
@@ -1,83 +1,278 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    tools:context=".PotholeDetails">
+    tools:context=".PotholeDetails"
+    android:orientation="vertical"
+    android:baselineAligned="false">
 
-    <ImageView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:id="@+id/reportedPotholeImage"
-        android:src="@drawable/pothole"
-        android:scaleType="fitXY"
-        />
+        android:layout_height="?attr/actionBarSize"
+        android:background="#fff"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        android:elevation="1dp"
+        tools:ignore="NotSibling">
+
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Profile"
+            android:textSize="16dp"
+            android:textAppearance="@style/bebasRegular"
+            android:textStyle="bold"/>
+    </androidx.appcompat.widget.Toolbar>
+
+
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/cardView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="8dp"-->
+<!--        android:layout_marginLeft="8dp"-->
+<!--        android:layout_marginRight="8dp"-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:elevation="0.5dp"-->
+<!--        android:background="@drawable/image_background">-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/image_background"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:minHeight="160dp"
+                    >
+
+                    <ImageView
+                        android:id="@+id/pic"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:minHeight="160dp"
+                        android:layout_margin="3dp"
+                        android:scaleType="fitXY" />
+
+                </RelativeLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="vertical">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#4b4b4b"
+                            android:textStyle="bold"
+                            android:text="Date Reported on: "
+                            android:textSize="15sp"/>
+
+
+                        <TextView
+                            android:id="@+id/date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:textStyle="bold"
+                            android:textColor="#4b4b4b"
+                            android:textSize="15sp"/>
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height=".75dp"
+                        android:background="#B3B2B2"></RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="3dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Traffic: "
+                            android:textSize="15sp"/>
+
+
+                        <TextView
+                            android:id="@+id/traffic"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="3dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Severity: "
+                            android:textSize="15sp"/>
+
+
+                        <TextView
+                            android:id="@+id/severity"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"/>
+                    </LinearLayout>
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="3dp"
+                        android:layout_height=".75dp"
+                        android:background="#B3B2B2"></RelativeLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/freq"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:textColor="#4b4b4b"
+                            android:textSize="15sp"/>
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height=".75dp"
+                android:background="#B3B2B2"></RelativeLayout>
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Pothole Address"
+                android:maxLines="2"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:textColor="#4b4b4b"
+                android:padding="8dp"
+                />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height=".75dp"
+                android:background="#B3B2B2"></RelativeLayout>
+
+        </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:id="@+id/detailsLayout"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/reportedPotholeImage"
-        android:orientation="vertical"
-        android:layout_margin="10dp">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/date"
-            android:text="Date : "
-            android:textSize="30dp"/>
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/location"
-            android:text="Location : "
-            android:textSize="30dp"/>
+            android:text="Current Status: "
+            android:layout_gravity="center_vertical"
+            android:textColor="#4b4b4b"
+            android:textSize="15sp"/>
+
 
         <TextView
+            android:id="@+id/currentStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/status"
-            android:text="Status : "
-            android:textSize="30dp"/>
+            android:layout_gravity="center_vertical"
+            android:textColor="#4b4b4b"
+            android:textSize="15sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/muncipality"
-            android:text="Muncipality related to : "
-            android:textSize="30dp"/>
     </LinearLayout>
+
+
+
+</LinearLayout>
+</ScrollView>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true">
+        android:orientation="horizontal"
+        android:layout_margin="10dp"
+        android:background="@drawable/image_background"
+        android:layout_gravity="bottom"
+        android:gravity="bottom"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/detailsLayout"
             android:layout_centerInParent="true"
+            android:padding="8dp"
+            android:minLines="2"
+            android:layout_weight="5"
+            android:textColor="#4b4b4b"
+            android:text="This pothole has been fixed by the respective municipality. If not Fixed, Click side button to report a complain to higher officials."
+            android:textSize="13sp" />
 
-            android:text="If not Fixed, Click the button to Recomplain."
-            android:textSize="10dp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
             android:id="@+id/reReportButton"
-            android:text="Report"
-
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:textSize="13dp"
+            android:textColor="#000"
+            android:padding="8dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_menu_camera"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"/>
     </LinearLayout>
-
-
-
-</RelativeLayout>
+</LinearLayout>
