--- a/app/src/main/res/layout/activity_pothole_report.xml
+++ b/app/src/main/res/layout/activity_pothole_report.xml
@@ -1,59 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".PotholeDetails"
+    android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#fff"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        android:elevation="1dp"
+        tools:ignore="NotSibling">
+
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Report"
+            android:textSize="16dp"
+            android:textAppearance="@style/bebasRegular"
+            android:textStyle="bold"/>
+    </androidx.appcompat.widget.Toolbar>
+
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#f0f6ff">
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PotholeReportActivity"
-    android:textAlignment="center">
+    android:orientation="vertical"
+    >
+
 
     <ImageView
         android:id="@+id/potholeImage"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="0dp"
-        android:alpha="0.4"
+        android:layout_marginBottom="10dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_menu_camera" />
 
     <Button
         android:id="@+id/takeImageButton"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Take Image"
-        android:textSize="24sp"
-        android:layout_below="@+id/potholeImage"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:padding="20dp"
-        android:layout_weight="50"
-        android:layout_centerHorizontal="true"/>
+        android:padding="15dp"
+        android:text="Take Image"
+        android:background="@drawable/my_button_bg"
+        android:textColor="#fff"
+        android:textSize="15dp"
+        />
+
     <LinearLayout
+        android:id="@+id/sevLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/sevLayout"
-        android:layout_below="@+id/takeImageButton"
         android:paddingLeft="20dp"
         android:paddingRight="20dp">
         <TextView
             android:id="@+id/sevText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_width="fill_parent"
+            android:layout_height="44dp"
+            android:gravity="center_vertical"
+            android:layout_weight="2"
+            android:textColor="#000"
             android:text="Severenity"
-            android:textSize="24sp"
-            android:layout_weight=".2"
+            android:textSize="18sp"
             />
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="44dp"
             android:layout_marginLeft="25dp"
-            android:layout_weight="100"
+            android:layout_weight="1"
             android:background="@drawable/background"
             android:orientation="horizontal">
 
@@ -76,7 +110,6 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
-
                 android:src="@drawable/drop" />
 
         </RelativeLayout>
@@ -96,19 +129,19 @@
 
         <TextView
             android:id="@+id/trafficText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight=".2"
-            android:gravity="center"
-            android:layout_marginTop="1dp"
+            android:layout_width="fill_parent"
+            android:layout_height="44dp"
+            android:gravity="center_vertical"
+            android:layout_weight="2"
             android:text="Traffic Zone"
-            android:textSize="24sp" />
+            android:textColor="#000"
+            android:textSize="18sp" />
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="44dp"
-            android:layout_weight="100"
-            android:layout_marginLeft="16dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="25dp"
             android:background="@drawable/background"
             android:orientation="horizontal">
 
@@ -123,7 +156,8 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="center"
-                android:spinnerMode="dropdown" />
+                android:dropDownVerticalOffset="-53dp"
+                android:spinnerMode="dialog"/>
 
             <ImageView
                 android:layout_width="45dp"
@@ -140,14 +174,17 @@
 
     <Button
         android:id="@+id/reportButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/trafficLayout"
-        android:layout_marginTop="20dp"
+        android:layout_margin="20dp"
         android:text="Report"
-        android:textSize="24sp"
-        android:layout_weight="50"
-        android:layout_centerHorizontal="true"/>
+        android:padding="8dp"
+        android:textSize="15dp"
+        android:background="@drawable/my_button_bg"
+        android:textColor="#fff"
+        android:layout_gravity="center_horizontal"/>
 
 
-</RelativeLayout>
+</LinearLayout>
+    </ScrollView>
+</LinearLayout>
