--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,8 +6,6 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-
-
     <dimen name="default_text_size">16sp</dimen>
     <dimen name="ui_group_top_margin">24dp</dimen>
 
@@ -19,8 +17,8 @@
 
     <dimen name="dots_height">30dp</dimen>
     <dimen name="dots_margin_bottom">20dp</dimen>
-    <dimen name="img_width_height">120dp</dimen>
-    <dimen name="slide_title">30dp</dimen>
-    <dimen name="slide_desc">16dp</dimen>
+    <dimen name="img_width_height">80dp</dimen>
+    <dimen name="slide_title">30sp</dimen>
+    <dimen name="slide_desc">20sp</dimen>
     <dimen name="desc_padding">40dp</dimen>
 </resources>
