--- a/app/src/main/res/layout/my_dialog.xml
+++ b/app/src/main/res/layout/my_dialog.xml
@@ -46,6 +46,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/button_background"
             android:text="Ok"
+            android:clickable="true"
             android:textColor="@color/green" />
 
     </LinearLayout>
